:recycle: Refactoring code. 简化租户套餐维护功能，删除 sys_tenant_menu表